# ouro

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  README.md  ouro.cvar  ouro.cvar.default  renderdoc.cap
assets/dungeons/: example.dun
assets/models/: bush_1.glb  bush_2.glb  headstone.glb  torch.glb  wood.glb
assets/shaders/cubemap/: frag.glsl  vert.glsl
assets/shaders/equirect_to_cubemap/: frag.glsl  vert.glsl
assets/shaders/healthbar/: frag.glsl  vert.glsl
assets/shaders/model/: frag.glsl  vert.glsl
assets/shaders/model_animated_instanced/: frag.glsl  vert.glsl
assets/shaders/model_instanced/: frag.glsl  vert.glsl
assets/shaders/particles2d/: compute.glsl  frag.glsl  vert.glsl
assets/shaders/particles3d/: compute.glsl  vert.glsl
assets/shaders/selection_indicators/: frag.glsl  vert.glsl
assets/shaders/sketch/: frag.glsl
assets/shaders/skybox/: frag.glsl
assets/shaders/terrain_info/: frag.glsl  vert.glsl
assets/skyboxes/: day.hdr
dialogues/: cesium0.oud  cesium1.oud  cesium10.oud  cesium11.oud  cesium12.oud  cesium13.oud  cesium14.oud  cesium15.oud  cesium16.oud  cesium17.oud  cesium18.oud  cesium19.oud  cesium2.oud  cesium20.oud  cesium21.oud  cesium22.oud  cesium23.oud  cesium24.oud  cesium3.oud  cesium4.oud  cesium5.oud  cesium6.oud  cesium7.oud  cesium8.oud  cesium9.oud  seagull.oud
src/: alarm.cpp  alarm.hpp  arg.cpp  arg.hpp  array.hpp  assert.hpp  asset.cpp  asset.hpp  audio.cpp  audio.hpp  color.cpp  color.hpp  common.hpp  console.cpp  console.hpp  core.cpp  core.hpp  cvar.cpp  cvar.hpp  debug.cpp  debug.hpp  debug_quick.cpp  debug_quick.hpp  dungeon.cpp  dungeon.hpp  ease.cpp  ease.hpp  edit.cpp  edit.hpp  entity.cpp  entity.hpp  entity_actor.cpp  entity_actor.hpp  entity_building.cpp  entity_building.hpp  entity_spawn.cpp  entity_spawn.hpp  fade.cpp  fade.hpp  fog.cpp  (+90 more)
src/tests/: test_array.cpp  test_ini.cpp  test_map.cpp  test_ouc.cpp  test_ring.cpp  test_runtime.cpp  test_string.cpp  test_unit.cpp
tapes/: particles_demo.out
tools/: detect_platform.sh  install_on_deck.sh  run_on_deck.sh  setup-deps.sh  setup_deps.sh
tools/cvar_parser/: cvar.cpp.tpl  cvar.hpp.tpl  example.cvar  go.mod  main.go
tools/dialogue_parser/: example.oud  go.mod  main.go
tools/stupid/: go.mod  main.go
